--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
 
       <div id="initialScreen" class="h-100">
         <div class="d-flex flex-column align-items-center justify-content-center h-100">
-            <h1>Multiplayer Snake</h1>
-            <button
-              type="submit"
-              class="btn btn-success"
-              id="newGameButton"
-            >
+            <h1>Multiplayer Snake Game</h1>
+            <button type="submit" class="btn btn-success" id="newGameButton" >
               Create New Game
             </button>
             <div>OR</div>
