--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div id="gameScreen" class="h-100">
         <div class="d-flex flex-column align-items-center justify-content-center h-100">
 
-          <h1>Your game code is: <span id="gameCodeDisplay"></span></h1>
+          <h2>Your game code is: <span id="gameCodeDisplay"></span></h2><p>press f5 to start a new game</p>
 
           <canvas id="canvas"></canvas>
         </div>
